--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 <link rel="stylesheet" href="./fonts.css"/>
 
 <div id="header">
-	<h1 id="magic8_txt">MAGIC</h1>
-	<img id="magic8_png" src="./magic8ball.png"/>
+        <h1 id="magic8_txt">MAGIC</h1>
+        <img id="magic8_png" src="./magic8ball.png"/>
 </div>
 
 
 <body>
-	<div id="infoBoxContainer">
-		<div class="" id="learn"></div>
+        <div id="infoBoxContainer">
+                <div class="infoBox" id="learn"></div>
 
-		<div class="" id="grow"></div>
+                <div class="infoBox" id="grow"></div>
 
-		<div class="" id="heal"></div>
-	</div>
+                <div class="infoBox" id="heal"></div>
+        </div>
 </body>
 
 <foot>
-	<div id="footer"></div>
+        <div id="footer"></div>
 </foot>
