--- a/index.html
+++ b/index.html
@@ -6,18 +6,14 @@
 <link rel="stylesheet" href="./fonts.css"/>
 
 <div id="header">
-        <h1 id="magic8_txt">MAGIC</h1>
-        <img id="magic8_png" src="./magic8ball.png"/>
+        <h1 id="magic8_txt">CONGRATS</h1>
+        <img id="magic8_png" src="./trophy/trophy.png"/>
 </div>
 
 
 <body>
         <div id="infoBoxContainer">
-                <div class="infoBox" id="learn"></div>
-
-                <div class="infoBox" id="grow"></div>
-
-                <div class="infoBox" id="heal"></div>
+                <a href="./trophy/NTEtrophy10.stl" download>
         </div>
 </body>
 
