--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
 <div id="header">
         <h1 id="magic8_txt">CONGRATS</h1>
-        <img id="magic8_png" src="./trophy/trophy.png"/>
+        <img id="magic8_png" src="./trophy.png"/>
 </div>
 
 
 <body>
         <div id="infoBoxContainer">
-                <a href="./trophy/NTEtrophy10.stl" download>
+                <a href="./NTEtrophy10.stl" download>
         </div>
 </body>
 
