--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="eng">
-
-<title>MAGIC8</title>
+        
 <link rel="stylesheet" href="./style.css"/>
 <link rel="stylesheet" href="./fonts.css"/>
 
-<div id="header">
-        <h1 id="magic8_txt">CONGRATS</h1>
-        <img id="magic8_png" src="./trophy.png"/>
-</div>
-
-
 <body>
         <div id="infoBoxContainer">
+                <img src="./trophy.png">
                 <a href="./NTEtrophy10.stl" download>
+                </img>
         </div>
 </body>
 
