--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
 <body>
         <div id="infoBoxContainer">
-                <img src="./trophy.png">
                 <a href="./NTEtrophy10.stl" download>
-                </img>
+                        <img src="./NTE10.png"/>
+                </a>
         </div>
 </body>
 
