--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
         <div id="infoBoxContainer">
                 <a href="./NTEtrophy10.stl" download>
-                        <img src="./NTE10.png"/>
+                        <img src="./NTE10.png">
                 </a>
         </div>
 </body>
