--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
                 <a href="./NTEtrophy10.stl" download>
                         <img src="./NTE10.png">
                 </a>
+                <p>
+                        Thanks Greg, I have extremely high respect for you as a person<br>and a boss. It really won't be the same here without you.<br>
+                        Even in the short time ive been at this company; I truly have experienced a deeped<br> understanding for respectful authority<br>
+                        Good luck to you.
+                </p>
         </div>
 </body>
 
