--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="eng">
 
+<head>
+<meta name="veiwport" content="width=device-width, initial-scale=1.0">
+</head>
+
 <title>MAGIC8</title>
 <link rel="stylesheet" href="./style.css"/>
 <link rel="stylesheet" href="./fonts.css"/>
 
+<script type="text/javascript" src="./fScript.js">
+</script>
+
 <div id="header">
-        <h1 id="magic8_txt">MAGIC</h1>
-        <img id="magic8_png" src="./magic8ball.png"/>
+	<h1 id="magic8_txt">MAGIC</h1>
+	<img id="magic8_png" src="./magic8ball.png"/>
 </div>
 
 
 <body>
-        <div id="infoBoxContainer">
-                <div class="infoBox" id="learn"></div>
+	<div id="infoBoxContainer">
+		<div class="infoBox" id="learn" onclick="changeColor(0)"></div>
 
-                <div class="infoBox" id="grow"></div>
+		<div class="infoBox" id="grow" onclick="changeColor(1)"></div>
 
-                <div class="infoBox" id="heal"></div>
-        </div>
+		<div class="infoBox" id="heal" onclick="changeColor(2)"></div>
+	</div>
 </body>
 
 <foot>
-        <div id="footer"></div>
+	<div id="footer"></div>
 </foot>
